--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <script src="https://kit.fontawesome.com/369c9d52a0.js" crossorigin="anonymous"></script>
 
-    <title>Regenérate Células</title>
+    <title>SM Digital</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
